--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>This is a header</h1>
-<p>this is a paragraph</p>
-<p>this is a second paragraph</p>
+    <h1>This is a header</h1>
+    <p>this is a paragraph</p>
+    <p>this is a second paragrph</p>
+    <p>this is a third paragrph</p>
 </body>
 </html>
